@@ -87,20 +87,6 @@ public class ViewSwing{
             playerNum = getPlayerNum();
         }
 
-        // Create all player's dice on the board 
-        // using 'player#' convention
-        for (int i = 1; i <= playerNum; i++) {
-            ImageIcon playerIcon = new ImageIcon("./images/r2.png");
-            JLabel playerLabel = new JLabel();
-            playerLabel.setIcon(playerIcon);
-            int[] pos = boardSpots.get("trailer");
-            int x = pos[0];
-            int y = pos[1];
-            playerLabel.setBounds(x, y, 100, 100);
-            pane.add(playerLabel, new Integer(3));
-            playerLabels.put("player" + String.valueOf(i), playerLabel);
-        }
-
         return playerNum;
     }
     
@@ -148,7 +134,7 @@ public class ViewSwing{
         JLabel boardLabel = new JLabel();
         boardLabel.setIcon(boardIcon);
         boardLabel.setBounds(0, 0, boardIcon.getIconWidth(), boardIcon.getIconHeight());
-        this.pane.add(boardLabel, new Integer(0));
+        this.pane.add(boardLabel, Integer.valueOf(0));
 
         // Add Turn Label
         this.turnLabel = new JLabel();
@@ -197,6 +183,19 @@ public class ViewSwing{
         // Update who the current player is by name
         this.currentPlayer = name;
         //String action = this.scanner.nextLine();
+
+        // If player name unrecognized, create an icon for it
+        if (!playerLabels.containsKey(name)) {
+            ImageIcon playerIcon = new ImageIcon("./images/r2.png");
+            JLabel playerLabel = new JLabel();
+            playerLabel.setIcon(playerIcon);
+            int[] pos = boardSpots.get("trailer");
+            int x = pos[0];
+            int y = pos[1];
+            playerLabel.setBounds(x, y, 100, 100);
+            pane.add(playerLabel, Integer.valueOf(3));
+            playerLabels.put(name, playerLabel);
+        }
 
         pane.repaint();
         
@@ -256,9 +255,32 @@ public class ViewSwing{
     public String getTargetLoc(ArrayList<String> neighbors){
         // System.out.println("Choose a location to move to\n" + neighbors);
         // String target = this.scanner.nextLine();
-        String target = JOptionPane.showInputDialog("Choose a location to move to\n" + neighbors);
+        //String target = JOptionPane.showInputDialog("Choose a location to move to\n" + neighbors);
 
         JLabel playerLabel = playerLabels.get(this.currentPlayer);
+
+        this.turnLabel.setText("Choose a location to move to");
+        updateButtons(neighbors);
+
+
+
+        pane.repaint();
+        
+        // Clear button clicks so there is no pre-input
+        for (int i = 0; i < this.buttonListeners.length; i++) {
+            this.buttonListeners[i].getClicked();
+        }
+
+        // Keep checking the action buttons until one is clicked
+        String target = null;
+        while (target == null) {
+            for (int i = 0; i < this.buttonListeners.length; i++) {
+                if (this.buttonListeners[i].getClicked()) {
+                    target = this.buttonListeners[i].actionText;
+                }
+            }
+        }
+
 
         int[] position = boardSpots.get(target);
         int x = position[0];
@@ -275,15 +297,35 @@ public class ViewSwing{
     public String getRole(ArrayList<String> roles){
         // System.out.println("Choose a role to take\n" + roles.keySet());
         // String role = this.scanner.nextLine();
-        String sroles = " ";
-        String s;
-        for (int i =0; i<roles.size();i++){
-            s =roles.get(i);
-            sroles+=s+=" ";
+        // String sroles = " ";
+        // String s;
+        // for (int i =0; i<roles.size();i++){
+        //     s =roles.get(i);
+        //     sroles+=s+=" ";
+        // }
+        // String role = JOptionPane.showInputDialog("Choose a role to take\n" + sroles);
+
+        this.turnLabel.setText("Choose a role");
+        updateButtons(roles);
+
+
+
+        pane.repaint();
+        
+        // Clear button clicks so there is no pre-input
+        for (int i = 0; i < this.buttonListeners.length; i++) {
+            this.buttonListeners[i].getClicked();
         }
-        System.out.println(sroles);
-        System.out.println(roles.size());
-        String role = JOptionPane.showInputDialog("Choose a role to take\n" + sroles);
+
+        // Keep checking the action buttons until one is clicked
+        String role = null;
+        while (role == null) {
+            for (int i = 0; i < this.buttonListeners.length; i++) {
+                if (this.buttonListeners[i].getClicked()) {
+                    role = this.buttonListeners[i].actionText;
+                }
+            }
+        }
 
         return role;
     }
@@ -291,7 +333,31 @@ public class ViewSwing{
     public String getTypeRole(){
         // System.out.println("Choose a type of role(star or extra)");
         // String type = this.scanner.nextLine();
-        String type = JOptionPane.showInputDialog("Choose a type of role(star or extra)");
+        //String type = JOptionPane.showInputDialog("Choose a type of role(star or extra)");
+        this.turnLabel.setText("Choose a type of Role (star or extra)");
+        ArrayList<String> options = new ArrayList<>();
+        options.add("star");
+        options.add("extra");
+        updateButtons(options);
+
+
+
+        pane.repaint();
+        
+        // Clear button clicks so there is no pre-input
+        for (int i = 0; i < this.buttonListeners.length; i++) {
+            this.buttonListeners[i].getClicked();
+        }
+
+        // Keep checking the action buttons until one is clicked
+        String type = null;
+        while (type == null) {
+            for (int i = 0; i < this.buttonListeners.length; i++) {
+                if (this.buttonListeners[i].getClicked()) {
+                    type = this.buttonListeners[i].actionText;
+                }
+            }
+        }
         return type;
     }
 
